<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include
        layout="@layout/header"
        android:id="@+id/header_connexion" />

    <include
        android:id="@+id/footerConnexion"
        layout="@layout/footer" />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cadre_accueil"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/Connexion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:shadowColor="#40000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/connexion_au_compte"
            android:textColor="@color/gray"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/champ_email"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Connexion"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/champ_mdp"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/bouton_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/connexion23"
            android:textColor="#00838F"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>