<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="416dp"
        android:layout_height="93dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds">

        <ImageView
            android:id="@+id/imageViewPagePrincipal"
            android:layout_width="81dp"
            android:layout_height="70dp"
            android:contentDescription="@string/icone1"
            android:onClick="onClickImageViewBouton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewJeu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/maison" />

        <ImageView
            android:id="@+id/imageViewJeu"
            android:layout_width="81dp"
            android:layout_height="70dp"
            android:contentDescription="@string/icone2"
            android:onClick="onClickImageViewBouton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/jeux" />

        <ImageView
            android:id="@+id/imageViewAjoutJeu"
            android:layout_width="81dp"
            android:layout_height="70dp"
            android:contentDescription="@string/icone3"
            android:onClick="onClickImageViewBouton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toEndOf="@+id/imageViewJeu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47"
            app:srcCompat="@drawable/ajoutjeux" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>